kubernetes/front-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front-service
  namespace: postit-projet
spec:
  replicas: 1
  selector:
    matchLabels:
      app: front-service
  template:
    metadata:
      labels:
        app: front-service
    spec:
      containers:
      - name: front-service
        image: rousmane/postit-front:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: front-service
  namespace: postit-projet
spec:
  type: NodePort
  selector:
    app: front-service
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
    nodePort: 30000
