kubernetes/postit-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postit-service
  namespace: postit-projet
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postit-service
  template:
    metadata:
      labels:
        app: postit-service
    spec:
      containers:
      - name: postit-service
        image: rousmane/postit-service:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8002
---
apiVersion: v1
kind: Service
metadata:
  name: postit-service
  namespace: postit-projet
spec:
  selector:
    app: postit-service
  ports:
  - protocol: TCP
    port: 8002
    targetPort: 8002
